--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_BACKEND_API=https://myanadsapi.vercel.app
-VITE_BACKEND_API=http://localhost:3000/api
+# VITE_BACKEND_API=https://myanadsapi.vercel.app/api/
+VITE_BACKEND_API=http://localhost:3000/api/
